--- a/index.html
+++ b/index.html
@@ -30,12 +30,10 @@
       font-weight: 700;
     }
     .hero {
-      background: url('https://source.unsplash.com/1600x600/?steel,structure') no-repeat center center/cover;
-      color: #0a2540;
+      background: url('images/Title-page.png') no-repeat center center/cover;
+      color: white;
       padding: 5rem 2rem;
       text-align: center;
-      background-blend-mode: overlay;
-      background-color: rgba(255, 255, 255, 0.6);
     }
     .hero h1 {
       font-size: 3rem;
@@ -103,24 +101,34 @@
     <h2>Our Capabilities</h2>
     <div class="grid">
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1571940647895-df1f7e61c81b?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Connection Plates">
+        <img src="images/gusset-plate.png" alt="Gusset Plate Connection">
         <h3>Connection Plates</h3>
-        <p>Designed for load transfer in structural systems, we fabricate custom bolt hole patterns with tight tolerances.</p>
+        <p>Our connection plates are engineered for durability and precision. Each piece is cut and drilled to exact specifications to ensure seamless integration into structural systems. These plates facilitate secure connections between beams and columns, supporting the integrity of your entire framework.</p>
       </div>
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1603398938378-ec6f38631ab1?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Bent Plates & Angles">
-        <h3>Bent Plates & Angles</h3>
-        <p>Custom-bent to spec for stairs, lintels, shelf angles, and complex transitions.</p>
-      </div>
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1585128792021-0297c1fdbf1b?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Base & Embed Plates">
+        <img src="images/base-plate.png" alt="Steel Base Plate on Concrete">
         <h3>Base & Embed Plates</h3>
-        <p>Precise anchor bolt placement, hole layout, and stiffener integration for concrete and steel interfaces.</p>
+        <p>We fabricate custom base and embed plates that serve as the foundational connection between steel structures and concrete. Every plate is precision-machined with exact hole placement and reinforced for long-term structural performance in commercial and industrial settings.</p>
       </div>
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1577709484149-d0e5f0d8f1cf?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Edge Angles & Weldments">
-        <h3>Edge Angles & Weldments</h3>
-        <p>We produce welded subassemblies, edge trim, and custom framing components with clean, durable welds.</p>
+        <img src="images/stiffener-plate.png" alt="Steel Stiffener Welded to I-beam">
+        <h3>Stiffener Plates</h3>
+        <p>Our stiffener plates are designed to resist local buckling and improve load distribution across beams and columns. Whether interior or exterior flange reinforcement is required, we fabricate to meet both standard and custom engineering demands with dependable accuracy.</p>
+      </div>
+      <div class="card">
+        <img src="images/shear-tab.png" alt="Steel Shear Tab Connection">
+        <h3>Shear Tabs</h3>
+        <p>GSBS shear tabs are built to handle high-stress load transfers between structural members. We precision-cut every tab for ease of field installation, enabling quicker build times without compromising connection strength or safety standards.</p>
+      </div>
+      <div class="card">
+        <img src="images/bent-plate.png" alt="Bent Plates">
+        <h3>Bent Plates</h3>
+        <p>Our bent plates are formed using CNC-controlled press brakes to maintain consistent bend radii and tolerance control. Whether for stair stringers, coping, or custom load-transfer applications, we deliver flawless bends in every run.</p>
+      </div>
+      <div class="card">
+        <img src="images/angle-clip.png" alt="Angle Clips">
+        <h3>Angle Clips</h3>
+        <p>GSBS angle clips are tailored for structural and miscellaneous framing requirements. We cut and drill clips to fit exact connection points, providing the flexibility needed for a variety of field applications, from joist hangers to curtain wall supports.</p>
       </div>
     </div>
   </section>
@@ -134,8 +142,10 @@
     <h2>Contact Us</h2>
     <p>Have a project or quote request? Let’s talk.</p>
     <p>Email: <a href="mailto:info@silvercreekstructural.com">info@silvercreekstructural.com</a></p>
-    <p>Phone: (883) 859-6333</p>
-    <p>Location: 3680 Burnette Park Drive, Suite B, Suwanee, Ga 30024</p>
+    <p>Phone: (678) 975-7477</p>
+    <p>Location: 25 Waddell Street NE, Suite 300, Atlanta, GA 30307</p>
+  </section>
+
   <footer>
     <p>&copy; 2025 GSBS Fabrication. All rights reserved.</p>
   </footer>
