--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     }
   </style>
 </head>
+<meta name="google-site-verification" content="nH5Mt9nJB086cIVLw0nOhJWmjRna8u2ynhMdAPgEofA" />
 <body>
   <header>
     <h1>GSBS Fabrication</h1>
