--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
   <section class="hero">
     <h1>Miscellaneous Steel, Masterfully Built</h1>
-    <p>Connection plates, bent plates, base plates, embeds, edge angles, and weldments built to perform in the field.</p>
+    <p>Connection plates, base plates, embeds, edge angles, and weldments built to perform in the field.</p>
   </section>
 
   <section class="section" id="capabilities">
@@ -104,7 +104,7 @@
       <div class="card">
         <img src="images/gusset-plate.png" alt="Gusset Plate Connection">
         <h3>Connection Plates</h3>
-        <p>Our connection plates are engineered for durability and precision. Each piece is cut and drilled to exact specifications to ensure seamless integration into structural systems. These plates facilitate secure connections between beams and columns, supporting the integrity of your entire framework.</p>
+        <p>Our connection plates are engineered for durability and precision. Each piece is cut and drilled to exact specifications to ensure seamless integration into structural systems. These plates secure connections between beams and columns, supporting the integrity of your entire framework.</p>
       </div>
       <div class="card">
         <img src="images/base-plate.png" alt="Steel Base Plate on Concrete">
@@ -122,29 +122,24 @@
         <p>GSBS shear tabs are built to handle high-stress load transfers between structural members. We precision-cut every tab for ease of field installation, enabling quicker build times without compromising connection strength or safety standards.</p>
       </div>
       <div class="card">
-        <img src="images/bent-plate.png" alt="Bent Plates">
-        <h3>Bent Plates</h3>
-        <p>Our bent plates are formed using CNC-controlled press brakes to maintain consistent bend radii and tolerance control. Whether for stair stringers, coping, or custom load-transfer applications, we deliver flawless bends in every run.</p>
-      </div>
-      <div class="card">
         <img src="images/angle-clip.png" alt="Angle Clips">
-        <h3>Angle Clips</h3>
-        <p>GSBS angle clips are tailored for structural and miscellaneous framing requirements. We cut and drill clips to fit exact connection points, providing the flexibility needed for a variety of field applications, from joist hangers to curtain wall supports.</p>
+        <h3>Angle Bracket</h3>
+        <p>GSBS angle brackets are tailored for structural and miscellaneous framing requirements. We cut and drill brackets to fit exact connection points, providing the flexibility needed for a variety of field applications, from joist hangers to curtain wall supports.</p>
       </div>
     </div>
   </section>
 
   <section class="section" id="about">
     <h2>About Us</h2>
-    <p>GSBS Fabrication is a family-owned shop with decades of experience in the steel industry. We specialize in the high-precision fabrication of structural steel components often overlooked but vital to the integrity of every build. Trusted by general contractors, structural engineers, and fabricators, our work stands out for its craftsmanship, consistency, and code compliance.</p>
+    <p>GSBS Fabrication is a family-owned steel shop built on years of hands-on expertise and unwavering dedication to quality. We specialize in the high-precision fabrication of structural steel components that are often overlooked—but are absolutely essential to the strength, stability, and safety of any build. From shear tabs and stiffener plates to custom embeds and connection assemblies, we deliver mission-critical parts with unmatched accuracy and consistency. Our shop is trusted by leading general contractors, structural engineers, and commercial fabricators alike for our craftsmanship, responsiveness, and code-compliant results. At GSBS, we don’t just fabricate steel—we reinforce the backbone of every structure we touch.</p>
   </section>
 
   <section class="section" id="contact">
     <h2>Contact Us</h2>
     <p>Have a project or quote request? Let’s talk.</p>
     <p>Email: <a href="mailto:info@silvercreekstructural.com">info@silvercreekstructural.com</a></p>
-    <p>Phone: (678) 975-7477</p>
-    <p>Location: 25 Waddell Street NE, Suite 300, Atlanta, GA 30307</p>
+    <p>Phone: (833) 859-6333</p>
+    <p>Location: 3680 Burnette Park Drive, Suite B, Suwanee, Ga 30024</p>
   </section>
 
   <footer>
