Lintels and Bollards

--- a/index.html
+++ b/index.html
@@ -148,7 +148,19 @@
               <h3>Shear Tabs</h3>
               <p>These welded tabs deliver efficient field connections that transfer shear forces while minimizing installation time and labor costs.</p>
             </div>
-          
+
+            <div class="card">
+                <img src="images/steel-lintel.png" alt="Steel Shear Tab Connection">
+                <h3>Lintels</h3>
+                <p>Durable steel lintels designed to support masonry above openings like doors and windows. Precision-cut for strength and easy installation.</p>
+              </div>
+
+            <div class="card">
+                <img src="images/bollard.png" alt="Steel Shear Tab Connection">
+                <h3>Bollards</h3>
+                <p>High-strength steel bollards built for impact resistance and perimeter protection. Ideal for traffic control and securing entry points.</p>
+            </div>
+
             <div class="card">
               <img src="images/angle-clip.png" alt="Angle Clips">
               <h3>Angle Brackets</h3>
