--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
     <h2>Contact Us</h2>
     <p>Have a project or quote request? Let’s talk.</p>
     <p>Email: <a href="mailto:info@silvercreekstructural.com">info@silvercreekstructural.com</a></p>
-    <p>Phone: (833) 859-6333</p>
-    <p>Location: 3680 Burnette Park Drive, Suite B, Suwanee, Ga 30024</p>
+    <p>Phone: (678)-770-2990</p>
+    <p>Location: 3680 189 Gloster Rd SW Lawrenceville, GA 30044</p>
   </section>
 
   <footer>
