--- a/index.html
+++ b/index.html
@@ -114,17 +114,27 @@
     <h1>Miscellaneous Steel, Masterfully Built</h1>
     <p>Connection plates, base plates, embeds, and more built to perform in the field.</p>
   </section>
+  <!-- SHIPPING BANNER -->
+  <section style="background-color: #e0f7fa; text-align: center; padding: 1rem 2rem; color: #0a2540; font-weight: bold;">
+    <p>📦 We proudly ship across the continental U.S. — coast to coast, we've got you covered. We also do rush orders.</p>
+  </section>
 
   <section class="section" id="capabilities">
     <h2>Our Capabilities</h2>
     <div class="grid">
         <div class="grid">
+
             <div class="card">
               <img src="images/gusset-plate.png" alt="Gusset Plate Connection">
               <h3>Gusset Plates</h3>
-              <p>Engineered for multi-directional load paths, our gusset plates offer rigid, high-strength connections between beams, braces, and columns. Designed for structural integrity under seismic and dynamic conditions.</p>
+              <p>
+                Engineered for multi-directional load paths, our gusset plates offer rigid, high-strength connections between beams, braces, and columns. Designed for structural integrity under seismic and dynamic conditions.<sup>*</sup>
+              </p>
+              <p style="font-size: 0.85rem; color: #666; margin-top: 0.5rem;">
+              *Available primed or galvanized upon request.
+            </p>
             </div>
-          
+
             <div class="card">
               <img src="images/embed-plate.png" alt="Embed Plates">
               <h3>Embed Plates</h3>
@@ -159,12 +169,6 @@
                 <img src="images/bollard.png" alt="Steel Shear Tab Connection">
                 <h3>Bollards</h3>
                 <p>High-strength steel bollards built for impact resistance and perimeter protection. Ideal for traffic control and securing entry points.</p>
-            </div>
-
-            <div class="card">
-              <img src="images/angle-clip.png" alt="Angle Clips">
-              <h3>Angle Brackets</h3>
-              <p>Versatile angle brackets that align and secure structural components in custom framing, decking, and miscellaneous steel assemblies.</p>
             </div>          
     </div>
   </section>
@@ -179,7 +183,7 @@
     <p>Have a project or quote request? Let’s talk.</p>
     <p>Email: <a href="mailto:info@silvercreekstructural.com">info@silvercreekstructural.com</a></p>
     <p>Phone: (678)-770-2990</p>
-    <p>Location: 3680 189 Gloster Rd SW Lawrenceville, GA 30044</p>
+    <p>Location: 189 Gloster Rd SW Lawrenceville, GA 30044</p>
   </section>
 
   <footer>
